Fix CSS formatting for consistency and improve readability

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -17,7 +17,7 @@ legend {
   font-size: 24px;
   font-weight: bold;
   padding: 0 10px;
-  background-color: #373A36;
+  background-color: #373a36;
   color: RGB(208 208 206);
 }
 label {
@@ -25,24 +25,25 @@ label {
   white-space: nowrap;
 }
 input {
-    padding: 5px 8px;
-    margin-bottom: 5px;
-    border: 1px solid #ccc;
-    font-size: 14px;
+  padding: 5px 8px;
+  margin-bottom: 5px;
+  border: 1px solid #ccc;
+  font-size: 14px;
 }
 select {
-    padding: 5px 8px;
-    font-size: 14px;
-    margin-bottom: 5px;
-    border: 1px solid #ccc;
+  padding: 5px 8px;
+  font-size: 14px;
+  margin-bottom: 5px;
+  border: 1px solid #ccc;
 }
 /* Submit en opnieuw btn */
-input[type="submit"], [type="button"] {
-    background-color: #373A36;
-    color: RGB(208 208 206);
-    border: none;
-    cursor: pointer;
-    font-weight: bold;
+input[type="submit"],
+[type="button"] {
+  background-color: #373a36;
+  color: RGB(208 208 206);
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
 }
 
 footer {
